<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_setting_device"
        android:icon="@drawable/ic_menu_device_setting"
        android:orderInCategory="100"
        android:title="@string/option_menu_setting_device"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_setting_connection"
        android:icon="@drawable/ic_menu_connection_setting"
        android:orderInCategory="100"
        android:title="@string/option_menu_setting_connection"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_addDevice"
        android:icon="@drawable/ic_menu_device"
        android:orderInCategory="100"
        android:title="@string/option_menu_addDevice"
        app:showAsAction="never" />
</menu>