<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center">
        <TextView
            android:id="@+id/textViNameRelay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/colorConfig"
            android:textColor="@color/colorText"
            android:text="@string/RelayText">
        </TextView>
    </LinearLayout>
    <!--Relay-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center">
        <Button
            android:id="@+id/btnRelayON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onText"/>
        <Button
            android:id="@+id/btnRelayOFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btnRelayON"
            android:layout_toRightOf="@+id/btnRelayON"
            android:text="@string/offText"/>
        <TextView
            android:id="@+id/textViRelayONOFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btnRelayOFF"
            android:layout_toRightOf="@+id/btnRelayOFF"
            android:textColor="@color/colorTextStatus"
            android:text="@string/statusText" />
    </RelativeLayout>


</RelativeLayout>