<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settingConnection.SettingConnectionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical">
        <!--Connection-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/colorConfig"
                android:textColor="@color/colorText"
                android:text="@string/connectionText">
            </TextView>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/serverGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/serverTextView"
                android:layout_width="wrap_content"
                android:layout_height="71dp"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="17dip"
                android:text="@string/serverText"
                android:textSize="16dp" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/server"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.22"
                    android:ems="10"
                    android:hint="@string/serverURIHint"
                    android:inputType="text" />
                <TextView
                    android:id="@+id/serverUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/server"
                    android:textSize="16dp"
                    android:text="@string/serverURIHint" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/portGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/serverGroup" >
            <TextView
                android:id="@+id/portTextView"
                android:layout_width="wrap_content"
                android:layout_height="71dp"
                android:textSize="16dp"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="32dip"
                android:text="@string/portText" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.22"
                    android:ems="10"
                    android:maxLength="4"
                    android:hint="@string/portHint"
                    android:inputType="number" />
                <TextView
                    android:id="@+id/portUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/port"
                    android:textSize="16dp"
                    android:text="@string/portHint" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/clientIdGroup"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/clientIDTextView"
                android:layout_width="wrap_content"
                android:layout_height="71dp"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:text="@string/clientIdText"
                android:textSize="16dp" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/clientId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.22"
                    android:ems="10"
                    android:hint="@string/clientIdHint"
                    android:inputType="text" />
                <TextView
                    android:id="@+id/clientIdUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/clientId"
                    android:textSize="16dp"
                    android:text="@string/clientIdHint" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cleanSessionGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/portGroup" >
            <TextView
                android:id="@+id/cleanSessionTextView"
                android:layout_width="wrap_content"
                android:layout_height="71dp"
                android:textSize="16dp"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="30dip"
                android:text="@string/cleanSessionText" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <CheckBox
                    android:id="@+id/cleanSessionCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/contentDescriptionCleanSession"
                    android:text="@string/empty" />
                <TextView
                    android:id="@+id/cleanSessionUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cleanSessionCheckBox"
                    android:textSize="16dp"
                    android:text="@string/empty" />
                </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
