<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background ="@color/colorBackgroundSetting"
    tools:context=".ui.addDevice.AddDeviceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical">
        <!--Type Device-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/shape_title"
                android:textColor="@color/colorTextTitle"
                android:text="@string/typeDevice"
                android:textSize="@dimen/textSizeTitle">
            </TextView>
        </RelativeLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >
            <Spinner
                android:id="@+id/deviceSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
            />
        </LinearLayout>
        <!--Number Device-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/shape_title"
                android:textColor="@color/colorTextTitle"
                android:text="@string/numberDevice"
                android:textSize="@dimen/textSizeTitle">
            </TextView>
        </RelativeLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >
            <Spinner
                android:id="@+id/spinnerNumberDevice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="name"
                android:textColor="@color/colorTextMain"
                />
        </LinearLayout>
        <!--Number Device-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/shape_title"
                android:textColor="@color/colorTextTitle"
                android:text="Alias Device"
                android:textSize="@dimen/textSizeTitle">
            </TextView>
        </RelativeLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >
            <EditText
                android:id="@+id/aliasDeviceUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.22"
                android:ems="10"
                android:hint="name"
                android:textAlignment="center"
                android:inputType="text"
                android:textSize="@dimen/textSizeUser" />
        </LinearLayout>
        <!--Add Device-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/shape_title"
                android:textColor="@color/colorTextTitle"
                android:text="@string/addDevice"
                android:textSize="@dimen/textSizeTitle">
            </TextView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/ButtonRelayTheme"
                android:id="@+id/btnAddDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_button_add"
                android:padding="15dp"
                android:text="@string/addText"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
